--- a/docs/INSTALL.txt
+++ b/docs/INSTALL.txt
@@ -1,8 +1,8 @@
-land.copernicus.theme Installation
+insitu.copernicus.theme Installation
 =======================
 
  * When you're reading this you have probably already run
-   ``easy_install land.copernicus.theme``. Find out how to install setuptools
+   ``easy_install insitu.copernicus.theme``. Find out how to install setuptools
    (and EasyInstall) here:
    http://peak.telecommunity.com/DevCenter/EasyInstall
 
@@ -12,24 +12,24 @@ land.copernicus.theme Installation
 
    into your Zope instance.
 
- * Create a file called ``land.copernicus.theme-configure.zcml`` in the
+ * Create a file called ``insitu.copernicus.theme-configure.zcml`` in the
    ``/path/to/instance/etc/package-includes`` directory.  The file
    should only contain this::
 
-       <include package="land.copernicus.theme" />
+       <include package="insitu.copernicus.theme" />
 
 .. _pythonproducts: http://plone.org/products/pythonproducts
 
 Alternatively, if you are using zc.buildout and the plone.recipe.zope2instance
 recipe to manage your project, you can do this:
 
- * Add ``land.copernicus.theme`` to the list of eggs to install, e.g.:
+ * Add ``insitu.copernicus.theme`` to the list of eggs to install, e.g.:
 
     [buildout]
     ...
     eggs =
         ...
-        land.copernicus.theme
+        insitu.copernicus.theme
 
   * Tell the plone.recipe.zope2instance recipe to install a ZCML slug:
 
@@ -37,7 +37,7 @@ recipe to manage your project, you can do this:
     recipe = plone.recipe.zope2instance
     ...
     zcml =
-        land.copernicus.theme
+        insitu.copernicus.theme
 
   * Re-run buildout, e.g. with:
 
