[refs #116804] Docs: update history.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,10 @@
 Changelog
 =========
 
-"Versions" as used by insitu.copernicus.eu. Just note what and when happened.
+2.6.0 - (unreleased)
+--------------------
+- Fix: sitemap link.
+  [GhitaB #116804]
 
 2.5.9 - (2020-07-24)
 --------------------
